--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,14 @@
 
         <!-- jhipster-needle-maven-property -->
     </properties>
-
+    
+	<repositories>
+		<repository>
+		    <id>jitpack.io</id>
+		    <url>https://jitpack.io</url>
+		</repository>
+	</repositories>
+	
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -98,6 +105,17 @@
     </dependencyManagement>
 
     <dependencies>
+    	<dependency>
+		    <groupId>com.github.AbdelRahmaneB</groupId>
+		    <artifactId>deezer-api-client</artifactId>
+		    <version>-SNAPSHOT</version>
+		    <exclusions>
+		        <exclusion>
+		            <groupId>org.slf4j</groupId>
+		            <artifactId>slf4j-nop</artifactId>
+		        </exclusion>
+		    </exclusions>
+		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
