--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Description for multisic",
   "private": true,
   "license": "UNLICENSED",
-  "cacheDirectories": ["node_modules"],
+  "cacheDirectories": [
+    "node_modules"
+  ],
   "dependencies": {
     "@angular/common": "5.2.0",
     "@angular/compiler": "5.2.0",
@@ -26,12 +28,15 @@
     "rxjs": "5.5.6",
     "swagger-ui": "2.2.10",
     "tether": "1.4.0",
+    "videogular": "^2.2.1",
+    "videogular2": "^6.0.6",
     "zone.js": "0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.6.6",
     "@angular/compiler-cli": "5.2.0",
     "@ngtools/webpack": "1.8.5",
+    "@types/core-js": "^0.9.46",
     "@types/jasmine": "2.5.53",
     "@types/node": "8.0.18",
     "angular2-template-loader": "0.6.2",
@@ -69,16 +74,16 @@
     "tslint": "5.5.0",
     "tslint-loader": "3.5.3",
     "typescript": "2.6.2",
-    "xml2js": "0.4.17",
     "uglifyjs-webpack-plugin": "1.1.5",
+    "web-app-manifest-loader": "0.1.1",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.9.5",
     "webpack-merge": "4.1.1",
     "webpack-notifier": "1.5.1",
     "webpack-visualizer-plugin": "0.1.11",
-    "web-app-manifest-loader": "0.1.1",
     "workbox-webpack-plugin": "3.0.0-alpha.3",
-    "write-file-webpack-plugin": "4.1.0"
+    "write-file-webpack-plugin": "4.1.0",
+    "xml2js": "0.4.17"
   },
   "engines": {
     "node": ">=6.9.0"
@@ -97,20 +102,14 @@
     "build": "yarn run webpack:prod",
     "test": "yarn run lint && karma start src/test/javascript/karma.conf.js",
     "test:watch": "yarn test -- --watch",
-    "webpack:dev":
-      "yarn run webpack-dev-server -- --config webpack/webpack.dev.js --progress --inline --hot --profile --port=9060 --watch-content-base",
-    "webpack:build:main":
-      "yarn run webpack -- --config webpack/webpack.dev.js --progress --profile",
+    "webpack:dev": "yarn run webpack-dev-server -- --config webpack/webpack.dev.js --progress --inline --hot --profile --port=9060 --watch-content-base",
+    "webpack:build:main": "yarn run webpack -- --config webpack/webpack.dev.js --progress --profile",
     "webpack:build": "yarn run cleanup && yarn run webpack:build:main",
-    "webpack:prod:main":
-      "yarn run webpack -- --config webpack/webpack.prod.js --profile",
-    "webpack:prod":
-      "yarn run cleanup && yarn run webpack:prod:main && yarn run clean-www",
+    "webpack:prod:main": "yarn run webpack -- --config webpack/webpack.prod.js --profile",
+    "webpack:prod": "yarn run cleanup && yarn run webpack:prod:main && yarn run clean-www",
     "webpack:test": "yarn run test",
-    "webpack-dev-server":
-      "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "webpack":
-      "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js",
+    "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js",
     "postinstall": "node node_modules/phantomjs-prebuilt/install.js"
   }
 }
