--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,18 +12,11 @@
         "suppressImplicitAnyIndexErrors": true,
         "outDir": "target/www/app",
         "lib": ["es7", "dom"],
-        "typeRoots": [
-            "node_modules/@types"
-        ],
+        "typeRoots": ["node_modules/@types"],
         "baseUrl": "./",
         "paths": {
-            "@angular/*": [
-                "../node_modules/@angular/*"
-            ]
+            "@angular/*": ["../node_modules/@angular/*"]
         }
     },
-    "include": [
-        "src/main/webapp/app",
-        "src/test/javascript/"
-    ]
+    "include": ["src/main/webapp/app", "src/test/javascript/"]
 }
