--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1</version>
+        </dependency>
     	<dependency>
 		    <groupId>com.github.AbdelRahmaneB</groupId>
 		    <artifactId>deezer-api-client</artifactId>
@@ -334,6 +339,11 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-data</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
         </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
     </dependencies>
