--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Description for multisic",
   "private": true,
   "license": "UNLICENSED",
-  "cacheDirectories": ["node_modules"],
+  "cacheDirectories": [
+    "node_modules"
+  ],
   "dependencies": {
     "@angular/common": "5.2.0",
     "@angular/compiler": "5.2.0",
@@ -13,7 +15,9 @@
     "@angular/platform-browser": "5.2.0",
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.9",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.9"
+  },
+  "devDependencies": {
     "@angular/cli": "1.6.6",
     "@angular/compiler-cli": "5.2.0",
     "@ngtools/webpack": "1.8.5",
@@ -67,9 +71,7 @@
     "webpack-visualizer-plugin": "0.1.11",
     "workbox-webpack-plugin": "3.0.0-beta.1",
     "write-file-webpack-plugin": "4.1.0",
-    "xml2js": "0.4.17"
-  },
-  "devDependencies": {
+    "xml2js": "0.4.17",
     "jasmine-core": "2.7.0",
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
@@ -100,20 +102,14 @@
     "build": "yarn run webpack:prod",
     "test": "yarn run lint && karma start src/test/javascript/karma.conf.js",
     "test:watch": "yarn test -- --watch",
-    "webpack:dev":
-      "yarn run webpack-dev-server -- --config webpack/webpack.dev.js --progress --inline --hot --profile --port=9060 --watch-content-base",
-    "webpack:build:main":
-      "yarn run webpack -- --config webpack/webpack.dev.js --progress --profile",
+    "webpack:dev": "yarn run webpack-dev-server -- --config webpack/webpack.dev.js --progress --inline --hot --profile --port=9060 --watch-content-base",
+    "webpack:build:main": "yarn run webpack -- --config webpack/webpack.dev.js --progress --profile",
     "webpack:build": "yarn run cleanup && yarn run webpack:build:main",
-    "webpack:prod:main":
-      "yarn run webpack -- --config webpack/webpack.prod.js --profile",
-    "webpack:prod":
-      "yarn run cleanup && yarn run webpack:prod:main && yarn run clean-www",
+    "webpack:prod:main": "yarn run webpack -- --config webpack/webpack.prod.js --profile",
+    "webpack:prod": "yarn run cleanup && yarn run webpack:prod:main && yarn run clean-www",
     "webpack:test": "yarn run test",
-    "webpack-dev-server":
-      "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "webpack":
-      "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js",
+    "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js",
     "postinstall": "node node_modules/phantomjs-prebuilt/install.js"
   }
 }
