--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@angular/platform-browser": "5.2.0",
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.9"
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.9",
+    "long": "^4.0.0"
   },
   "devDependencies": {
     "@angular/cli": "1.6.6",
