--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
 		        </exclusion>
 		    </exclusions>
 		</dependency>
+		<dependency>
+		    <groupId>com.github.AbdelRahmaneB</groupId>
+		    <artifactId>rhapsody-java-sdk</artifactId>
+		    <version>-SNAPSHOT</version>
+		</dependency>
         <dependency>
             <groupId>se.michaelthelin.spotify</groupId>
             <artifactId>spotify-web-api-java</artifactId>
